# RaceEngineSandbox

./: .gitmodules  CMakeLists.txt  OpenStreetRace.cpp  OpenStreetRace.h
Game/: DotNetHost.cpp  DotNetHost.h  Game.cpp  Game.h
Game/Camera/: FPSCameraController.cpp  FPSCameraController.h
Game/Entities/: Bollard.h  CarEntity.h  DinosaurEntity.cpp  DinosaurEntity.h
Game/Scenes/: WaterLevel.cpp  WaterLevel.h
assets/Models/: bollard.glb  untitled.glb
assets/Models/SkyBox/: SkyBox.glb
assets/Models/trex/source/: Bip001_Take 001_BaseLayer.ozz  skeleton.ozz
assets/Shaders/: ColourFragmentShader.glsl  HdrFragmentShader.glsl  HdrVertexShader.glsl  PassThroughFragmentShader.glsl  PassThroughVertexShader.glsl  PbrFragmentShader.glsl  PresentToScreenFragmentShader.glsl  SkyboxFragmentShader.glsl  SkyboxVertexShader.glsl  metallic-roughness.frag
assets/Textures/Skies/Field/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
